tests/baselines/reference/typePredicateWithThisParameter.errors.txt
typePredicateWithThisParameter.ts(10,10): error TS99999: Annotated function was also inferred to be a type guard
typePredicateWithThisParameter.ts(14,10): error TS99999: Annotated function was also inferred to be a type guard


==== typePredicateWithThisParameter.ts (2 errors) ====
    // Repro from #15310
    
    interface Foo {
        foo: string;
    }
    interface Bar {
        bar: string;
    }
    
    function isFoo1(object: {}): object is Foo {
             ~~~~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
        return 'foo' in object;
    }
    
    function isFoo2(this: void, object: {}): object is Foo {
             ~~~~~~
!!! error TS99999: Annotated function was also inferred to be a type guard
        return 'foo' in object;
    }
    
    declare let test: Foo | Bar;
    
    if (isFoo1(test)) {
        test.foo = 'hi';
    }
    
    if (isFoo2(test)) {
        test.foo = 'hi';
    }
    